--- a/ux/src/styles.css
+++ b/ux/src/styles.css
@@ -522,7 +522,7 @@ width: 10px;
   font-size: 50px;
   font-weight: 200;
   margin: 0;
-  padding: 50px 0;color: #fff;
+  padding: 25px 0;color: #fff;
 }
 
 .single-product-area .zigzag-bottom {background-color: #333333}
@@ -530,10 +530,6 @@ width: 10px;
 .single-product-area {
   padding: 80px 0 130px;
 }
-
-
-
-
 
 .sidebar-title {
     color: #3dc6ab;
@@ -966,4 +962,13 @@ div.cart-collaterals ul.products li.product:hover .add_to_cart_button{background
     margin-top: 10px;
     margin-bottom: 10px;
     color: white;
+}
+
+.customer-content {
+    font-size: 15px;
+    padding: 25px;
+}
+
+.contact-link {
+    font-size: 30px;
 }
