--- a/ux/src/styles.css
+++ b/ux/src/styles.css
@@ -233,7 +233,7 @@ z-index: 9;
   font-size: 50px;
 }
 
-.single-promo:hover {color: #fff;background: #222;border-color: #222}
+/* .single-promo:hover {color: #fff;background: #222;border-color: #222} */
 
 .section-title {
   font-family: "Raleway",sans-serif;
@@ -978,9 +978,9 @@ div.cart-collaterals ul.products li.product:hover .add_to_cart_button{background
   color: #1abc9c;
 }
 
-.order-btn {
+.btn.order-btn {
     font-size: 40px;
-    background-color: green;
+    background-color: #ff9899;
     margin: auto;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -997,7 +997,11 @@ div.cart-collaterals ul.products li.product:hover .add_to_cart_button{background
 }
 
 .menu-item {
-    background-color: green;
+    background-color: #1abc9c;
+}
+
+.pink-bg {
+  background-color: #ff9899;
 }
 
 .menu-item-name {
