--- a/ux/src/styles.css
+++ b/ux/src/styles.css
@@ -1017,7 +1017,6 @@ div.cart-collaterals ul.products li.product:hover .add_to_cart_button{background
 
 .menu-item-desc {
     color: white;
-    text-align: center;
 }
 
 .add-to-cart-btn {
@@ -1037,8 +1036,9 @@ div.cart-collaterals ul.products li.product:hover .add_to_cart_button{background
   }
 
 .macro-info {
-    padding-top: 25px;
-    color: orange;
+    margin: auto;
+    padding: 4%;
+    color: white;
 }
 
 .accordion-proceed {
@@ -1049,4 +1049,19 @@ div.cart-collaterals ul.products li.product:hover .add_to_cart_button{background
 .accordion-previous {
     margin-right: auto;
     background-color: #1ABC9C;
+}
+
+.menu-item-image {
+    padding: 4%;
+}
+
+.continue-btn {
+    background-color: #ff9899;
+    color: white;
+    float: right;
+    margin-bottom: 1%;
+}
+
+.accordion-card {
+    padding-bottom: 2%;
 }
