--- a/ux/src/styles.css
+++ b/ux/src/styles.css
@@ -237,6 +237,10 @@ z-index: 9;
   font-size: 50px;
 }
 
+.green-bg {
+  background: #1abc9c;
+}
+
 /* .single-promo:hover {color: #fff;background: #222;border-color: #222} */
 
 .section-title {
@@ -1006,6 +1010,10 @@ div.cart-collaterals ul.products li.product:hover .add_to_cart_button{background
 
 .pink-bg {
   background-color: #ff9899;
+}
+
+.pink {
+  color: #ff9899;
 }
 
 .menu-item-name {
