--- a/ux/src/styles.css
+++ b/ux/src/styles.css
@@ -576,11 +576,11 @@ input[type="text"], input[type="password"], input[type="email"], textarea {
     padding: 10px;
 }
 input[type="submit"], button[type=submit] {
-    background: none repeat scroll 0 0 #1abc9c;
+    /* background: none repeat scroll 0 0 #1abc9c; */
     border: medium none;
     color: #fff;
     padding: 11px 20px;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
 }
 input[type="submit"]:hover, button[type=submit]:hover {background-color: #222}
 .single-sidebar input[type="text"] {
@@ -1072,4 +1072,8 @@ div.cart-collaterals ul.products li.product:hover .add_to_cart_button{background
 
 .accordion-card {
     padding-bottom: 2%;
+}
+
+.confirmation {
+  font-size: 1.50rem;
 }
