added phone number input

--- a/ux/src/styles.css
+++ b/ux/src/styles.css
@@ -1092,3 +1092,7 @@ div.cart-collaterals ul.products li.product:hover .add_to_cart_button{background
     display: block;
     width: 100%;
 }
+
+.disabled-link {
+  pointer-events: none;
+}
